@@ -1,4 +1,4 @@
-$Id: History,v 1.13 2002-02-02 04:00:08 perl Exp $
+$Id: History,v 1.14 2002-02-03 22:23:23 perl Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -19,6 +19,11 @@ committal in the CVS repository !
 
 History file for visualization/HepRep sub-category
 ---------------------------------------------------------------------------
+
+3rd February 2002  Joseph Perl
+- Detect transient data by testing for
+  !fpCurrentPV || fReadyForTransients
+  rather than just fReadyForTransients
 
 1st February 2002  Joseph Perl
 - Defer file opening until first real HepRepType is to be written.
